--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,11 @@ timezone: Australia/Sydney
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Aveygo
+title: Aveygo's Blog
 tagline: AKA Gregory Taylor
 
 description: >-
-  Gregory Taylor, programmer at university of technology, sydney 
+  Blog posts written by Gregory Taylor, undergrad computer science programmer at University of Technology, Sydney 
 
 url: "https://aveygo.github.io"
 
