--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ timezone: Australia/Sydney
 # ↓ --------------------------
 
 title: Greg's Blog
-tagline: AI and more
+tagline: Gregory Taylor's personal blog.
 
 description: >-
   Blog posts written by Gregory Taylor, undergrad computer science programmer at University of Technology, Sydney
