updated tagline again & description

--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,10 @@ timezone: Australia/Sydney
 # ↓ --------------------------
 
 title: Greg's Blog
-tagline: Gregory Taylor's personal blog.
+tagline: Personal Blog of Gregory Taylor
 
 description: >-
-  Blog posts written by Gregory Taylor, undergrad computer science programmer at University of Technology, Sydney
+  Blog posts written by Gregory Taylor, Computer Science graduate at University of Technology, Sydney
 
 url: "https://aveygo.github.io"
 
