--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -10,6 +10,10 @@
 - type: rss
   icon: "fas fa-rss"
   noblank: true
+
+- type: linkedin
+  icon: 'fab fa-linkedin'
+  url:  'https://www.linkedin.com/in/gregory-taylor-au/'
 # Uncomment and complete the url below to enable more contact options
 #
 # - type: mastodon
